updated and fixed
